<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.yahooweatherforecast.MainActivity" >

    <item android:id="@+id/action_donate"
        android:title="@string/action_donate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_manage"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_manage"/>

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="ifRoom"/>


</menu>
